--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           </ul>
         </nav>
         <div class="icon" id="icon">
-          <i class="fa-brands fa-github"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-figma"></i>
+          <a href="https://github.com/ElcanBadalovs/ElcanBadalovs"><i class="fa-brands fa-github"></i></a>
+          <a href="https://linkedin.com/in/elcan-badalov-0aa895253"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/elcan_bada1ov/"><i class="fa-brands fa-square-instagram"></i></a>
         </div>
       </div>
     </section>
@@ -225,9 +225,9 @@
         <li>elcanbadalov06@gmail.com</li>
       </ul>
       <div class="footer-icon">
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-figma"></i>
+        <a href="https://github.com/ElcanBadalovs/ElcanBadalovs"><i class="fa-brands fa-github"></i></a>
+          <a href="https://linkedin.com/in/elcan-badalov-0aa895253"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/elcan_bada1ov/"><i class="fa-brands fa-square-instagram"></i></a>
       </div>
     </footer>
 
