--- a/index.html
+++ b/index.html
@@ -75,36 +75,33 @@
             <a href="https://github.com/ElcanBadalovs/PNFT-Market-Registration.git">Look it up</a>
           </div>
           <div class="projects-blok">
-            <img src="image/Screenshot_58.png" alt="image" />
-            <h3>PROJECT 2</h3>
+            <img src="image/Lenny.png" alt="image" />
+            <h3>Lenny</h3>
             <div class="line"></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              I developed an e-commerce site called Lenny using ReactJS and SCSS for the frontend and Strapi for the backend.
             </p>
-            <a href="#">Look it up</a>
+            <a href="https://github.com/ElcanBadalovs/Lenny">Look it up</a>
           </div>
         </div>
         <div class="projects-container1">
           <div class="projects-blok">
-            <img src="image/Screenshot_58.png" alt="image" />
-            <h3>PROJECT 3</h3>
+            <img src="image/Barber.png" alt="image" />
+            <h3>Barber landing page</h3>
             <div class="line"></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              I developed a landing page site called Barber using ReactJS and TailwindCSS
             </p>
-            <a href="#">Look it up</a>
+            <a href="https://barber-lanfing-page.netlify.app/">Look it up</a>
           </div>
           <div class="projects-blok">
-            <img src="image/Screenshot_58.png" alt="image" />
-            <h3>PROJECT 4</h3>
+            <img src="image/booknetic.png" alt="image" />
+            <h3>Booknetic</h3>
             <div class="line"></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              I developed a site called Booknetic using HTML, SCSS and JavaScript
             </p>
-            <a href="#">Look it up</a>
+            <a href="https://elcanbadalovs.github.io/Booknetic/">Look it up</a>
           </div>
         </div>
       </div>
