--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         I'm Front-End Developer. I'm developing a website with HTML / CSS /
         JavaSript / React JS
       </p>
-      <a href="#" download>Download CV</a>
+      <a href="./CV.pdf" download>Download CV</a>
     </section>
 
     <!-- Projects section -->
